--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -117,9 +117,9 @@
                                 </a>
                             </li>
                             <li>
-                                <a asp-page="/FailedTransactions/Index">
+                                <a asp-page="/RecordedTransactions/Index">
                                     <span class="icon is-small"><i class="fas fa-bug"></i></span>
-                                    <span class="menu-text">Failed Txs</span>
+                                    <span class="menu-text">Recorded Txs</span>
                                 </a>
                             </li>
                             <li>
