--- a/src/Tippy/Pages/RecordedTransactions/Details.cshtml
+++ b/src/Tippy/Pages/RecordedTransactions/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Tippy.Pages.FailedTransactions.DetailsModel
+@model Tippy.Pages.RecordedTransactions.DetailsModel
 @{
     ViewData["Title"] = "Failed Transaction";
 }
