Disable debug output script button when gdb is not detected
Fix #88

--- a/src/Tippy/Pages/Transactions/Details.cshtml
+++ b/src/Tippy/Pages/Transactions/Details.cshtml
@@ -178,7 +178,7 @@
                               {
                                   <a class="button" href="#" disabled>Debug this script</a>
                               }
-                                <Partial name="_DebuggerInfo" />
+                              <Partial name="_DebuggerInfo" />
                             </div>
                         }
                     }
@@ -300,11 +300,17 @@
                 @if (Model.IsDebuggerSupported)
                 {
                     <div class="column is-5">
-                        <a asp-page="/Debugger/Details" asp-route-txHash="@Model.Transaction.Hash" asp-route-ioIndex="@index" asp-route-ioType="output" asp-route-scriptType="1" class="button">Debug this script</a>
+                        @if (Model.DebuggerDepsInstalled)
+                        {
+                            <a asp-page="/Debugger/Details" asp-route-txHash="@Model.Transaction.Hash" asp-route-ioIndex="@index" asp-route-ioType="output" asp-route-scriptType="1" class="button">Debug this script</a>
+                        }
+                        else
+                        {
+                            <a class="button" href="#" disabled>Debug this script</a>
+                        }
                         <Partial name="_DebuggerInfo" />
                     </div>
                 }
-
             }
             <div class="column is-12">
                 @if (typeScript != null)
