call up the hash value of cell data

--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
                                 </a>
                                 <hr class="navbar-thin-divider" />
                                 <a asp-page="/MyConstract/Index" class="button is-dark">
-                                    <span class="icon"><i class="fas fa-layer-group"></i></span>
+                                    <span class="icon"><i class="fab fa-fonticons"></i></span>
                                     <span>My Constracts</span>
                                 </a>
                             </div>
