--- a/src/Tippy/Pages/Transactions/Details.cshtml
+++ b/src/Tippy/Pages/Transactions/Details.cshtml
@@ -328,10 +328,11 @@
                 }
             </div>
 
-            <div class="column is-2">
-                Data
+            <div class="column is-12">
+                <span>Data</span>  &nbsp;&nbsp;&nbsp;&nbsp;<span style="color:red"> Hash Value: &nbsp;@Model.OutputsDataHash[output.RealId]</span>
             </div>
             <div class="column is-12">
+             
                 <pre>@Model.OutputsData[output.RealId]</pre>
             </div>
         </div>
