suport for docker change some file that suport for docker.

--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -197,7 +197,7 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/Lobibox.min.js"></script>
+    <script src="~/js/lobibox.min.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
