suport for docker

--- a/src/Tippy/Pages/Transactions/Details.cshtml
+++ b/src/Tippy/Pages/Transactions/Details.cshtml
@@ -329,7 +329,9 @@
             </div>
 
             <div class="column is-12">
-                <span>Data</span>  &nbsp;&nbsp;&nbsp;&nbsp;<span style="color:red"> Hash Value: &nbsp;@Model.OutputsDataHash[output.RealId]</span>
+                <span>Data</span>
+                &nbsp;&nbsp;&nbsp;&nbsp;<span style="color:red"> Cell Index: &nbsp;@output.RealId</span>
+                &nbsp;&nbsp;&nbsp;&nbsp;<span style="color:red"> Hash Value: &nbsp;@Model.OutputsDataHash[output.RealId]</span>
             </div>
             <div class="column is-12">
              
